@@ -15,6 +15,8 @@ ChangeLog
                      lscp_get_volume();
                      lscp_set_volume();
 
+                   Audio routing representation changed integer array.
+
 0.5.1  2006-12-22  Added support for new (un)subscribable events:
                      LSCP_EVENT_AUDIO_OUTPUT_DEVICE_COUNT,
                      LSCP_EVENT_AUDIO_OUTPUT_DEVICE_INFO,
